fix createRule. Aggiunta createAction e createTrigger