@@ -17,8 +17,8 @@ public class PlayAudioActionTest {
 
     @Test
     public void createAction() {
-        PlayAudioActionCreator creator = new PlayAudioActionCreator("/Users/camillamurati/Desktop/cat.mp3");
-        Action action = creator.createAction();
+        ActionCreator creator = new PlayAudioActionCreator();
+        Action action = creator.createAction("/Users/camillamurati/Desktop/cat.mp3");
         assertNotNull(action);
         assertTrue(action instanceof PlayAudioAction);
     }
@@ -26,26 +26,26 @@ public class PlayAudioActionTest {
     @Test
     public void createWithValidPath() {
         String stringFilePath = "/Users/camillamurati/Desktop/cat.mp3";
-        PlayAudioActionCreator creator = new PlayAudioActionCreator(stringFilePath);
-        Action action = creator.createAction();
+        ActionCreator creator = new PlayAudioActionCreator();
+        Action action = creator.createAction(stringFilePath);
         assertNotNull(action);
         assertTrue(action instanceof PlayAudioAction);
-        Path filePath = Path.of(stringFilePath);
+        Path filePath = Paths.get(stringFilePath);
         assertEquals(filePath, ((PlayAudioAction) action).getAudioFilePath());
     }
 
-//    @Test
-//    public void createWithNullPath() {
-//        PlayAudioActionCreator creator = new PlayAudioActionCreator(null);
-//        Action action = creator.createAction();
-//        assertNotNull(action);
-//        assertTrue(action instanceof PlayAudioAction);
-//    }
+    @Test
+    public void createWithNullPath() {
+        PlayAudioActionCreator creator = new PlayAudioActionCreator();
+        Action action = creator.createAction("/Users/camillamurati/Desktop/cat.mp3");
+        assertNotNull(action);
+        assertTrue(action instanceof PlayAudioAction);
+    }
 
     @Test
     public void createWithInvalidPath() {
-        PlayAudioActionCreator creator = new PlayAudioActionCreator("invalid/path/file.mp3");
-        Action action = creator.createAction();
+        ActionCreator creator = new PlayAudioActionCreator();
+        Action action = creator.createAction("invalid/path/file.mp3");
         assertNotNull(action);
         assertTrue(action instanceof PlayAudioAction);
     }
